MARKETINFRA-719 external build